# ArUco

./: README.md  Вопросы.txt
install/: local_setup.sh  setup.sh
install/camera_customization/share/camera_customization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_customization/share/camera_customization/cmake/: camera_customizationConfig.cmake
install/data_with_camera_pkg/share/data_with_camera_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/data_with_camera_pkg/share/data_with_camera_pkg/cmake/: data_with_camera_pkgConfig.cmake
install/lab4_image_receiver/lib/lab4_image_receiver/: lab4_image_receiver_node
install/lab4_image_receiver/share/ament_index/resource_index/package_run_dependencies/: lab4_image_receiver
install/lab4_image_receiver/share/ament_index/resource_index/parent_prefix_path/: lab4_image_receiver
install/lab4_image_receiver/share/lab4_image_receiver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lab4_image_receiver/share/lab4_image_receiver/cmake/: lab4_image_receiverConfig.cmake
install/lab4_image_receiver/share/lab4_image_receiver/launch/: image_launch.py
install/lab4_image_sender/lib/lab4_image_sender/: lab4_image_sender_node
install/lab4_image_sender/share/lab4_image_sender/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lab4_image_sender/share/lab4_image_sender/cmake/: lab4_image_senderConfig.cmake
install/robot/share/robot/: local_setup.sh  package.sh  package.xml
install/robot/share/robot/launch/: robot_launch.py
install/robot_camera_processor/lib/robot_camera_processor/: robot_camera_processor  robot_camera_processor_node
install/robot_camera_processor/share/ament_index/resource_index/package_run_dependencies/: robot_camera_processor
install/robot_camera_processor/share/robot_camera_processor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_camera_processor/share/robot_camera_processor/cmake/: robot_camera_processorConfig.cmake
install/robot_odometry/share/robot_odometry/: local_setup.sh  package.sh  package.xml
install/robot_teleop/lib/robot_teleop/: robot_teleop_node
install/robot_teleop/share/ament_index/resource_index/parent_prefix_path/: robot_teleop
install/robot_teleop/share/robot_teleop/: local_setup.sh  package.sh
install/test_image_processing/lib/test_image_processing/: test_image_processing_node
install/test_image_processing/share/test_image_processing/: local_setup.sh  package.sh  package.xml
install/test_image_receiver/lib/test_image_receiver/: test_image_receiver_node
install/test_image_receiver/share/test_image_receiver/: local_setup.sh  package.sh
install/test_image_sender/lib/test_image_sender/: test_image_sender_node
install/test_image_sender/share/test_image_sender/: local_setup.sh  package.sh  package.xml
install/test_robot_plugin/share/test_robot_plugin/: local_setup.sh  package.sh  package.xml
log/: latest_build
src/camera/: camera.py
src/detection_py/: detection.py
src/generate_aruco_marker/: generate_aruco_marker.py
src/lab4_image_receiver/: CMakeLists.txt  package.xml  Код раб.txt
src/lab4_image_receiver/src/: lab4_image_receiver_node.cpp
src/lab4_image_sender/: CMakeLists.txt
src/robot/: CMakeLists.txt
src/robot/launch/: robot_launch.py
src/robot/src/: robot_node.txt
src/robot_camera_processor/: CMakeLists.txt  package (копия).xml  package.xml
src/robot_camera_processor/camera_calibration/: camera_matrix.npy  dist_coeffs.npy
src/robot_camera_processor/src/: camera_PC.txt  robot_ArUco.txt  robot_camera_processor_node.cpp
src/robot_odometry/: CMakeLists.txt
src/robot_odometry/src/: robot_odometry_node.cpp
src/robot_teleop/: CMakeLists.txt  package.xml
src/robot_teleop/src/: robot_teleop_node.cpp
src/test_image_processing/: CMakeLists.txt
src/test_image_processing/src/: test_image_processing_node.cpp
src/test_image_receiver/: CMakeLists.txt
src/test_image_receiver/src/: test_image_receiver_node.cpp
src/test_image_sender/: CMakeLists.txt
src/test_image_sender/src/: test_image_sender_node.cpp
src/test_robot_plugin/: CMakeLists.txt
src/test_robot_plugin/src/: wheel_robot_controller.cpp
world_aruco/: world_aruco
world_aruco/test_robot/: model (копия).sdf  model.sdf  model_camera.sdf  model_lidar.sdf
резерв/: ArUco.txt
